📦 Updated to Minecraft 1.19.3 (#24)